fix temporary bento media serving
